samples/_failures_safe/1761599450_1ee709_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_87264a6d.c: In function ‘parse_expression’:
./samples/SAFE/__tmp_87264a6d.c:158:13: error: expected expression at end of input
  158 |             if (right > 0 && result < INT_MIN + right)
      |             ^~
./samples/SAFE/__tmp_87264a6d.c:158:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_87264a6d.c:158:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_87264a6d.c:158:13: error: expected declaration or statement at end of input
